projects/client/src/style/layout/index.scss
@use '$style/scss/mixins/index' as *;

:root {
  /**
   * Dynamic card size config
   */
  --list-inner-width: calc(100dvw - 2 * var(--layout-distance-side) - var(--layout-sidebar-distance));
  --max-list-item-count: 10;
  --max-list-landscape-item-count: 7;

  --list-item-count: var(--max-list-item-count);
  --list-landscape-item-count: var(--max-list-landscape-item-count);

  --min-portrait-card-width: var(--ni-132);
  --min-landscape-card-width: var(--ni-200);

  @include dynamic-item-count(--list-item-count,
    var(--min-portrait-card-width),
    var(--max-list-item-count),
  );
  @include dynamic-item-count(--list-landscape-item-count,
    var(--min-landscape-card-width),
    var(--max-list-landscape-item-count),
  );

  /**
   * Card dimensions
   */
  --height-card-footer: var(--ni-40);

  --width-portrait-card: var(--min-portrait-card-width);
  @include dynamic-card-width(--width-portrait-card,
    var(--min-portrait-card-width),
    var(--list-item-count),
  );
  --height-portrait-card-cover: calc(var(--width-portrait-card) * 1.5);
  --height-portrait-card: calc(var(--height-portrait-card-cover) + var(--height-card-footer));

  --width-landscape-card: var(--min-landscape-card-width);
  @include dynamic-card-width(--width-landscape-card,
    var(--min-landscape-card-width),
    var(--list-landscape-item-count),
  );
  --height-landscape-card-cover: calc(var(--width-landscape-card) / 1.786);
  --height-landscape-card: calc(var(--height-landscape-card-cover) + var(--height-card-footer));

  --width-person-card: var(--ni-120);
  --height-person-card-cover: var(--ni-176);
  --height-person-card: calc(var(--height-person-card-cover) + var(--height-card-footer));

  --width-summary-card: var(--ni-276);
  --height-summary-card-cover: var(--ni-208);
  --height-summary-card: var(--height-summary-card-cover);

  --width-list-card: var(--ni-480);
  --height-list-card: var(--ni-256);

  --width-comment-card: min(var(--ni-480), 85vw);
  --height-comment-card: var(--ni-172);

  --width-trivia-card: min(var(--ni-480), 85vw);
  --height-trivia-card: var(--ni-172);

  --width-comment-thread-card: var(--width-comment-card);
  --height-comment-thread-card: var(--ni-480);

  --width-toast-card: var(--ni-104);
  --height-toast-card: var(--ni-80);

  --width-cta-landscape-card: var(--width-landscape-card);
  --height-cta-landscape-card: var(--height-landscape-card);
  --height-cta-landscape-card-cover: var(--height-landscape-card-cover);

  --width-cta-portrait-card: var(--width-portrait-card);
  --height-cta-portrait-card: var(--height-portrait-card);
  --height-cta-portrait-card-cover: var(--height-portrait-card-cover);

  --width-cta-activity-card: var(--ni-340);
  --height-cta-activity-card: var(--height-landscape-card-cover);

  --width-cta-list-placeholder-card: calc(100dvw - 2 * var(--layout-distance-side) - var(--layout-sidebar-distance));

  --width-profile-item: var(--ni-80);
  --height-profile-item: var(--ni-96);

  --width-where-to-watch-item: var(--ni-96);
  --height-where-to-watch-item: var(--ni-96);

  --preferred-sentiment-card-width: calc(3 * var(--width-where-to-watch-item) + 2 * var(--list-gap));
  --width-sentiment-card: min(var(--preferred-sentiment-card-width), 85vw);
  --height-sentiment-card: var(--ni-208);

  @include for-mobile {
    --height-sentiment-card: var(--ni-188);
  }

  /**
   * List dimensions
   */
  --height-landscape-list: calc(var(--height-landscape-card) + var(--layout-scrollbar-width));
  --height-person-list: calc(var(--height-person-card) + var(--layout-scrollbar-width));
  --height-poster-list: calc(var(--height-portrait-card) + var(--layout-scrollbar-width));
  --height-lists-list: calc(var(--height-list-card) + var(--layout-scrollbar-width) + var(--layout-footer-less-padding));
  --height-comments-list: calc(var(--height-comment-card) + var(--layout-scrollbar-width) + var(--layout-footer-less-padding));
  --height-trivia-list: calc(var(--height-trivia-card) + var(--layout-scrollbar-width) + var(--layout-footer-less-padding));
  --height-sentiment-list: var(--height-sentiment-card);
  --height-comment-thread-list: calc(var(--height-comment-thread-card) + var(--layout-scrollbar-width) + var(--layout-footer-less-padding));
  --height-profile-list: calc(var(--height-profile-item) + var(--layout-scrollbar-width));
  --height-where-to-watch-list: calc(var(--height-where-to-watch-item) + var(--layout-scrollbar-width) + var(--layout-footer-less-padding));

  /**
   * Structural variables
   */
  --navbar-side-padding: var(--ni-16);
  --navbar-height: var(--ni-72);
  --side-navbar-width: var(--ni-48);
  --side-navbar-actions-height: var(--ni-40);
  --mobile-navbar-height: calc(var(--ni-56) + env(safe-area-inset-bottom, 0));
  --footer-bar-padding: var(--ni-40);

  --layout-scrollbar-width: var(--ni-8);
  --layout-footer-less-padding: var(--ni-16);

  --list-header-gap: var(--gap-s);
  --list-gap: var(--gap-s);
  @include adaptive-gap(--list-gap);

  --summary-side-action-bar-width: var(--ni-40);
  --summary-poster-gap: var(--gap-s);
  --summary-poster-width: min(calc(100dvw - 2 * (var(--layout-distance-side) + var(--summary-side-action-bar-width) + var(--summary-poster-gap))),
    var(--ni-320));

  --toggle-large-width: var(--ni-88);

  @-moz-document url-prefix() {
    --layout-scrollbar-width: var(--ni-16);
  }

  /**
   * Font sizes
   */
  --font-size-tag: var(--ni-10);
  --font-size-text: var(--ni-14);

  @include for-tablet-sm-and-below {
    --width-summary-card: 100%;
    --height-summary-card-cover: var(--ni-112);
  }

  --font-size-title: var(--ni-18);
  --font-size-separator: var(--ni-16);
}

